Fixed missing gap between pokedex_attack spans

--- a/src/assets/card.css
+++ b/src/assets/card.css
@@ -43,17 +43,17 @@
     display: flex;
     padding: 0px 10px 0px 10px;
     justify-content: space-between;
+    gap: 4px;
 }
 
-.pokemon .pokemon__attacks span {
+.pokemon .pokemon__attacks > span {
     width: 30%;
     background-color: #f16820;
     border-radius: 4px;
-    padding: 7px;
+    /* padding: 6px; */
     font-weight: 700;
     color: #ffffff;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 6px 6px 10px 10px;
     font-size: 12px;
     margin-bottom: 10px;
     word-wrap: break-word;
