--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -3,8 +3,7 @@
 @import url('typo.css');
 
 body {
-    /* margin: 6px; */
-    line-height: 1.5em;
+    line-height: 1;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #fbfbfb;
     box-sizing: border-box;
